# bevy_hex

./: Cargo.toml
assets/shaders/: hex_terrain_fragment.wgsl  hex_terrain_material.wgsl  hex_terrain_vertex.wgsl
src/: hexgrid.rs  main.rs
